Fix Task_008_A_Adv_300x250 - text align / href added

--- a/src/components/features/Advertisement/Advertisement300x250.module.scss
+++ b/src/components/features/Advertisement/Advertisement300x250.module.scss
@@ -2,8 +2,13 @@
 
 .root {
 
-  .title {
-    font-size: 10px;
+  .container {
     text-align: center;
   }
+
+    .title {
+      font-family: $primary-font;
+      font-size: 10px;
+
+    }
 }
